--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,15 @@
     <build>
         <plugins>
             <plugin>
+                <configuration>
+                <archive>
+                    <manifest>
+                        <addClasspath>true</addClasspath>
+                        <!-- here we specify that we want to use the main method within the App class -->
+                        <mainClass>src.main.java.calculator.Calculator</mainClass>
+                    </manifest>
+                </archive>
+            </configuration>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <executions>
@@ -50,7 +59,6 @@
             <artifactId>log4j-core</artifactId>
             <version>2.14.0</version>
         </dependency>
-
     </dependencies>
 
     <properties>
