--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>calculatorDevOps</artifactId>
+    <artifactId>Scientific_Calculator</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
@@ -15,7 +15,7 @@
                     <manifest>
                         <addClasspath>true</addClasspath>
                         <!-- here we specify that we want to use the main method within the App class -->
-                        <mainClass>src.main.java.calculator.Calculator</mainClass>
+                        <mainClass>src.main.java.calculator.Scientific_Calculator</mainClass>
                     </manifest>
                 </archive>
             </configuration>
@@ -30,7 +30,7 @@
                         <configuration>
                             <archive>
                                 <manifest>
-                                    <mainClass>calculator.Calculator</mainClass>
+                                    <mainClass>calculator.Scientific_Calculator</mainClass>
                                 </manifest>
                             </archive>
                             <descriptorRefs>
